--- a/index.html
+++ b/index.html
@@ -25,235 +25,7 @@
         </div>
       </nav>
     </header>
-    <section class="caja-general">
-      <div>
-        <div>
-          <h2>-Meet us</h2>
-          <br>
-        </div>
-        <ul>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/1.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 1</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor">
-                <img src="assets/img/2.png" class="coders" alt="nombre">
-                <figcaption>
-                  <span>Nombre Coder 2</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor">
-                <img src="assets/img/3.png" class="coders" alt="nombre">
-                <figcaption>
-                  <span>Nombre Coder 3</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor">
-                <img src="assets/img/4.png" class="coders" alt="nombre">
-                <figcaption>
-                  <span>Nombre Coder 4</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor">
-                <img src="assets/img/5.png" class="coders" alt="nombre">
-                <figcaption>
-                  <span>Nombre Coder 5</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor">
-                <img src="assets/img/6.png" class="coders" alt="nombre">
-                <figcaption>
-                  <span>Nombre Coder 6</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/7.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 7</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/8.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 8</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/9.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 9</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/10.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 10</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/11.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 11</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/12.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 12</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/13.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 13</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/14.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 14</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/15.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 15</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/16.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 16</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/17.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 17</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/18.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 18</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/19.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 19</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/20.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 20</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/21.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 21</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-          <li class="grid">
-            <div class="">
-              <figure class="contenedor"> <!--Contenerder parent -->
-                <img src="assets/img/22.png" class="coders" alt="nombre">
-                <figcaption> <!--contenedor child -->
-                  <span>Nombre Coder 22</span>
-                </figcaption>
-              </figure>
-            </div>
-          </li>
-        </ul>
-      </div>
+    <section id="caja-contenedor" class="caja-general">
     </section>
     <footer>
       <h3>Laboratoria</h3>
