--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Coders Laboratoria</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="assets/img/favicons.png">
+    <link rel="icon" href="assets/img/icon/favicons.png">
   </head>
   <body>
     <header>
-      <nav>
+      <nav id="nav-header">
         <div>
           <a id="logo" class="logo" href="index.html"></a>
           <a id="toggle" class="menu" href=""></a>
@@ -25,7 +25,11 @@
         </div>
       </nav>
     </header>
+    <div class="slider">
+      <h1 id="teclado"><span>var strongWoman=</span>"We want to change the World";</h1>
+    </div>
     <section id="caja-contenedor" class="caja-general">
+      <h2>Ellas son Nuestras Coders</h2>
     </section>
     <footer>
       <h3>Laboratoria</h3>
